[gd_scene load_steps=2 format=2]

[ext_resource path="res://Engine/PlayerSelectScreen.gd" type="Script" id=1]

[node name="PlayerSelectScreen" type="Control"]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 120
custom_constants/margin_top = 120
custom_constants/margin_left = 120
custom_constants/margin_bottom = 120
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 120.0
margin_top = 120.0
margin_right = 904.0
margin_bottom = 480.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 784.0
margin_bottom = 14.0
text = "Select your character:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 784.0
margin_bottom = 78.0
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_top = 20.0
margin_right = 784.0
margin_bottom = 40.0
alignment = 1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 218.0
margin_right = 302.0
margin_bottom = 20.0
text = "Character 1"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 306.0
margin_right = 390.0
margin_bottom = 20.0
text = "Character 2"

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 394.0
margin_right = 478.0
margin_bottom = 20.0
text = "Character 3"

[node name="Button4" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 482.0
margin_right = 566.0
margin_bottom = 20.0
text = "Character 4"

[node name="Controles" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 784.0
margin_bottom = 215.0
text = "Controles:
Mouse Direito - Dash
Mouse Esquerdo - Tiro
Q e E - Habilidades 1 e 2
WASD - Movimentação
P - Pause
ESC - Restart Rápido
 "
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Button4" to="." method="_on_Button4_pressed"]
